--- a/assets/css/dorang.css
+++ b/assets/css/dorang.css
@@ -11847,3 +11847,108 @@ body.dark-theme {
   top: 5px;
 }
 
+.button {
+  text-decoration: none;
+  font-size: 0.875rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  display: inline-block;
+  border-radius: 3.5rem;
+  background-color: #FC1750;
+  color: #000000;
+  padding: 1rem 2rem;
+}
+
+.popup {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  bottom: 0;
+  right: 0;
+  z-index: 2;
+  visibility: hidden;
+  opacity: 0;
+  overflow: hiden;
+  transition: 0.64s ease-in-out;
+}
+.popup-inner {
+  position: relative;
+  bottom: -100vw;
+  right: -100vh;
+  display: flex;
+  align-items: center;
+  max-width: 800px;
+  max-height: 450px;
+  width: 100%;
+  height: 50%;
+  background-color: #0b0b0b;
+  transform: rotate(32deg);
+  transition: 0.64s ease-in-out;
+}
+.popup__photo {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+}
+.popup__photo img {
+  width: auto;
+  height: 100%;
+}
+.popup__text {
+  text-align: left;
+  flex-direction: column;
+  justify-content: center;
+  width: 80%;
+  height: 100%;
+  padding: 4rem;
+}
+.popup__text h1 {
+  font-family: "Raleway", sans-serif;
+  font-size: 1.7rem;
+  font-weight: Bold;
+  margin-bottom: 2rem;
+  color: #FC1750;
+}
+.popup__text li {
+  font-family: "Raleway", sans-serif;
+  font-size: 1 rem;
+  margin-bottom: 2rem;
+  color: #B3B3B3;
+}
+.popup__text p {
+  font-size: 0.875rem;
+  color: #686868;
+  line-height: 1.5;
+}
+.popup:target {
+  visibility: visible;
+  opacity: 1;
+}
+.popup:target .popup-inner {
+  bottom: 0;
+  right: 0;
+  transform: rotate(0);
+}
+.popup__close {
+  position: absolute;
+  right: -1rem;
+  top: -1rem;
+  width: 3rem;
+  height: 3rem;
+  font-size: 0.875rem;
+  font-weight: 300;
+  border-radius: 100%;
+  background-color: #FC1750;
+  z-index: 4;
+  color: #fff;
+  line-height: 3rem;
+  text-align: center;
+  cursor: pointer;
+  text-decoration: none;
+}
